--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
 
 img {
   width: 100%;
-  display: flex;
+  display: block;
 }
 
 @media only screen and (min-width: 25em) {
@@ -61,8 +61,33 @@ img {
 
 @media only screen and (min-width: 38em) {
 
+  .photo:nth-child(5) {
+    display: none;
+  }
+
+  .photo {
+    width: 33.3333%;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
+
+  .photo:nth-child(5) {
+    display: inline-block;
+  }
+
+  .photo:nth-child(3), .photo:nth-child(4), .photo:nth-child(5) {
+    width: 33.333%;
+  }
+
+  .photo:nth-child(2){
+    width: 33.33%;
+  }
+
+  .photo:nth-child(1) {
+    display: inline-block;
+    width: 66.666%;
+  }
 
 }
